# conway

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/conway/: conway.h  grid.h
include/ui/: ui.h
src/: cnwy.c
src/conway/: conway.c  grid.c
src/ui/: ui.c
tests/: CMakeLists.txt  conway.cpp  grid.cpp
